--- a/contact.html
+++ b/contact.html
@@ -147,7 +147,7 @@
                     </div>
                     <div>
                         <h5 class="mb-1">Location</h5>
-                        <p class="m-0">121, Rishikesh India</p>
+                        <p class="m-0">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</p>
                     </div>
                 </div>
                 <div class="bg-white shadow p-5 rounded-3 mb-4 d-flex align-items-center">
@@ -165,7 +165,7 @@
                     </div>
                     <div>
                         <h5 class="mb-1">Email</h5>
-                        <p class="m-0">info@yogastic.com <br> yogastic@gmail.com</p>
+                        <p class="m-0">vikashnawani999@gmail.com</p>
                     </div>
                 </div>
             </div>
@@ -173,13 +173,12 @@
     </div>
 </div>
 
-<div class="container-fluid wow slideInUp p-3" data-wow-delay="0.6s">
-  
-        <iframe class="position-relative rounded w-100 h-100"
-        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13803.404255444193!2d78.3293063!3d30.127075!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39093df155555557%3A0x411142a3fa089217!2sHimalayan%20Yoga%20Retreat!5e0!3m2!1sen!2sin!4v1725430541847!5m2!1sen!2sin"
-        frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-        tabindex="0"></iframe>
-</div>
+		<div class="container-fluid wow slideInUp p-3" data-wow-delay="0.6s">
+				<iframe class="position-relative rounded w-100 h-100"
+				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.7535759562084!2d78.3165724753484!3d30.129864124880616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3909170f057bc725%3A0x19af18b34dadf31!2sThe%20Hosteller%20Rishikesh%2C%20Upper%20Tapovan!5e0!3m2!1sen!2sin!4v1725622260010!5m2!1sen!2sin"
+				frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
+				tabindex="0"></iframe>
+		</div>
 
         
 		<!-- Footer Section -->
