--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -317,41 +317,44 @@
     <!-- Footer Section -->
     <footer class="bg-white text-dark pt-5 pb-4">
         <div class="container text-center text-md-left">
-            <div class="row text-center text-md-left">
+            <div class="row text-center text-md-start d-flex justify-content-center align-items-center">
                 <!-- Logo and About -->
-                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <img src="images/logo.jpeg" alt="Yoga">
-                    <h5 class="text-uppercase mb-4 font-weight-bold">Yoga</h5>
-                    <p>Experience the serenity and balance of yoga with us. Discover a journey that brings inner peace and holistic wellness.</p>
-                    <div class="d-flex justify-content-center">
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <img src="images/logo.jpeg" alt="Yoga" class="mb-3">
+                    <p class="text-justify">Thank you for choosing to embark on this journey of mindfulness and inner peace with us. We are honored to be a part of your yoga experience and are here to guide you every step of the way.</p>
+                    <div class="d-flex justify-content-start justify-start-md-start">
                         <a class="btn hover-fill btn-theme btn-square me-2" href="https://www.instagram.com/himalayasyogaretreat/"><i class="fab fa-instagram fw-normal"></i></a>
                         <a class="btn hover-fill btn-theme btn-square" href="https://www.threads.net/@himalayasyogaretreat/"><i class="fas fa-comments fw-normal"></i></a>
                     </div>
                 </div>
                 <!-- Quick Links -->
-                <div class="link-animated col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold">Quick Links</h5>
-                    <p><a href="#" class="text-dark mb-0">Home</a></p>
-                    <p><a href="#" class="text-dark mb-0">About Us</a></p>
-                    <p><a href="#" class="text-dark mb-0">Services</a></p>
-                    <p><a href="#" class="text-dark mb-0">Team</a></p>
-                    <p><a href="#" class="text-dark mb-0">Contact Us</a></p>
+                <div class="col-md-3 col-lg-3 offset-lg-1 mb-4">
+                    <h5 class="text-uppercase mb-4 fw-bold text-theme text-start">Quick Links</h5>
+                    <ul class="link-animated list-unstyled text-start">
+                        <li><a href="index.html" class="text-dark d-block mb-2">Home</a></li>
+                        <li><a href="about.html" class="text-dark d-block mb-2">About Us</a></li>
+                        <li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Services</a></li>
+                        <li><a href="rishikesh-location.html" class="text-dark d-block mb-2">Location</a></li>
+                        <li><a href="contact.html" class="text-dark d-block mb-2">Contact Us</a></li>
+                    </ul>
                 </div>
                 <!-- Contact Info -->
-                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h5 class="text-uppercase mb-4 font-weight-bold">Contact Info</h5>
-                    <p><i class="fas fa-map-marker-alt me-3"></i><a class="text-dark mb-0" href="https://www.google.com/maps/place/India">123 Street, India</a></p>
-                    <p><i class="fas fa-envelope me-3"></i><a class="text-dark mb-0" href="mailto:yogaretreatinhimalaya@gmail.com">yogaretreatinhimalaya@gmail.com</a></p>
-                    <p><i class="fas fa-phone me-3"></i><a class="text-dark mb-0" href="tel:+919084359144">+919084359144</a></p>
+                <div class="col-md-4 col-lg-4 mb-4">
+                    <h5 class="text-uppercase mb-4 fw-bold text-theme text-start">Contact Info</h5>
+                    <ul class="list-unstyled text-start">
+                        <li class="mb-2"><i class="fas fa-map-marker-alt text-theme me-2"></i><a href="https://www.google.com/maps/place/India" class="text-dark">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</a></li>
+                        <li class="mb-2"><i class="fas fa-envelope text-theme me-2"></i><a href="mailto:yogaretreatinhimalaya@gmail.com" class="text-dark">vikashnawani999@gmail.com</a></li>
+                        <li><i class="fas fa-phone text-theme me-2"></i><a href="tel:+919084359144" class="text-dark">+919084359144</a></li>
+                    </ul>
                 </div>
             </div>
 
             <!-- Footer Bottom -->
             <div class="row align-items-center mt-3">
-                <div class="col-md-12 col-lg-12">
-                    <p class="text-center text-dark">
-                        &copy; 2024 <a class="text-dark border-bottom" href="/">Yoga</a>. All Rights Reserved.
-                        Designed by <a class="text-dark border-bottom" href="https://www.youtube.com/@iamsuraj_01">Jakhmola Web House</a>
+                <div class="col-12">
+                    <p class="text-center text-dark m-0">
+                        &copy; 2024 <a class="text-dark border-bottom" href="/">Himalayas Yoga Retreat</a>. All Rights Reserved.
+                        Designed by <a class="text-dark border-bottom" href="https://jakhmolaweb.co.in/">Jakhmola Web House</a>
                     </p>
                 </div>
             </div>
