--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -429,9 +429,9 @@
                         <!-- Accommodation Section -->
                         <div id="accommodation" class="mb-5 wow fadeInUp" data-wow-delay="0.1s">
                             <div class="p-4 bg-white rounded shadow-sm wow fadeInUp" data-wow-delay="0.2s">
-                                <h2 class="text-dark mb-4"><span class="text-theme fw-bold">A</span>ccommodation</h2>
+                                <h2 class="text-dark mb-4 fw-bold"><span class="text-theme fw-bold">A</span>ccommodation</h2>
                                 <hr class="custom-underline">
-                                <p>Choose from our comfortable and serene accommodation options, designed to enhance your yoga experience and provide a peaceful retreat after a day of practice and exploration.</p>
+                                <p>Learn about our comfortable and serene accommodation options that provide a restful retreat. Choose between different room types, all designed to enhance your stay with us and help you feel at home.</p>
                                 <div class="row">
                                     <!-- First Carousel for Accommodation Option 1 -->
                                     <div class="col-lg-6 mb-4">
@@ -441,7 +441,7 @@
                                                     <img src="images/Private room.jpg" class="d-block w-100" alt="Two Single Beds">
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="images/reception area.jpg" class="d-block w-100" alt="Room Interior">
+                                                    <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
                                                 </div>
                                                 <div class="carousel-item">
                                                     <img src="images/sharedroom1.jpg" class="d-block w-100" alt="Yoga Area">
@@ -459,19 +459,16 @@
                                         <!-- Amenities List for Accommodation Option 1 -->
                                         <ul class="list-group list-group-flush mt-3">
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bed text-theme me-2"></i>Two Single Beds
+                                                <i class="fas fa-bed text-theme me-2"></i>Single Beds
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bath text-theme me-2"></i>Shower / AC / Hot Water / Wi-Fi
+                                                <i class="fas fa-bath text-theme me-2"></i>AC / Wi-Fi
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-utensils text-theme me-2"></i>Breakfast, Lunch, Dinner
+                                                <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-calendar-check text-theme me-2"></i>3-Days Yoga Retreat
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-book text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                                <i class="fas fa-clipboard-list text-theme me-2"></i>Yoga Equipment & Learning Materials
                                             </li>
                                         </ul>
                                     </div>
@@ -484,7 +481,7 @@
                                                     <img src="images/sharedroom2.jpg" class="d-block w-100" alt="Double Bed">
                                                 </div>
                                                 <div class="carousel-item">
-                                                    <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
+                                                    <img src="images/reception area.jpg" class="d-block w-100" alt="Room Interior">
                                                 </div>
                                                 <div class="carousel-item">
                                                     <img src="images/bathroom.jpg" class="d-block w-100" alt="Bathroom">
@@ -505,16 +502,13 @@
                                                 <i class="fas fa-bed text-theme me-2"></i>Double Bed
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-bath text-theme me-2"></i>Shower / AC / Hot Water / Wi-Fi
+                                                <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-utensils text-theme me-2"></i>Breakfast, Lunch, Dinner
+                                                <i class="fas fa-tree text-theme me-2"></i>Private Balcony with Garden View
                                             </li>
                                             <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-calendar-check text-theme me-2"></i>3-Days Yoga Retreat
-                                            </li>
-                                            <li class="list-group-item d-flex align-items-center">
-                                                <i class="fas fa-book text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                                <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
                                             </li>
                                         </ul>
                                     </div>
