--- a/rishikesh-location.html
+++ b/rishikesh-location.html
@@ -220,7 +220,7 @@
                                                 <img src="images/Private room.jpg" class="d-block w-100" alt="Two Single Beds">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/reception area.jpg" class="d-block w-100" alt="Room Interior">
+                                                <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
                                             </div>
                                             <div class="carousel-item">
                                                 <img src="images/sharedroom1.jpg" class="d-block w-100" alt="Yoga Area">
@@ -238,19 +238,16 @@
                                     <!-- Amenities List for Accommodation Option 1 -->
                                     <ul class="list-group list-group-flush mt-3">
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bed text-theme me-2"></i>Two Single Beds
+                                            <i class="fas fa-bed text-theme me-2"></i>Single Beds
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bath text-theme me-2"></i>Shower / AC / Hot Water / Wi-Fi
+                                            <i class="fas fa-bath text-theme me-2"></i>AC / Wi-Fi
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-utensils text-theme me-2"></i>Breakfast, Lunch, Dinner
+                                            <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-calendar-check text-theme me-2"></i>3-Days Yoga Retreat
-                                        </li>
-                                        <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-book text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                            <i class="fas fa-clipboard-list text-theme me-2"></i>Yoga Equipment & Learning Materials
                                         </li>
                                     </ul>
                                 </div>
@@ -263,7 +260,7 @@
                                                 <img src="images/sharedroom2.jpg" class="d-block w-100" alt="Double Bed">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
+                                                <img src="images/reception area.jpg" class="d-block w-100" alt="Room Interior">
                                             </div>
                                             <div class="carousel-item">
                                                 <img src="images/bathroom.jpg" class="d-block w-100" alt="Bathroom">
@@ -284,16 +281,13 @@
                                             <i class="fas fa-bed text-theme me-2"></i>Double Bed
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bath text-theme me-2"></i>Shower / AC / Hot Water / Wi-Fi
+                                            <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-utensils text-theme me-2"></i>Breakfast, Lunch, Dinner
+                                            <i class="fas fa-tree text-theme me-2"></i>Private Balcony with Garden View
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-calendar-check text-theme me-2"></i>3-Days Yoga Retreat
-                                        </li>
-                                        <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-book text-theme me-2"></i>Yoga Equipment & Learning Materials
+                                            <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
                                         </li>
                                     </ul>
                                 </div>
