--- a/himalaya-location.html
+++ b/himalaya-location.html
@@ -217,13 +217,13 @@
                                     <div id="carouselAccommodation1" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner rounded">
                                             <div class="carousel-item active">
-                                                <img src="images/himalaya-accommodation1.jpg" class="d-block w-100" alt="Luxury Mountain Lodge">
+                                                <img src="images/Private room.jpg" class="d-block w-100" alt="Two Single Beds">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/himalaya-accommodation2.jpg" class="d-block w-100" alt="Traditional Homestay">
+                                                <img src="images/dinning area.jpg" class="d-block w-100" alt="Room Interior">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/himalaya-accommodation3.jpg" class="d-block w-100" alt="Eco-Friendly Retreat">
+                                                <img src="images/sharedroom1.jpg" class="d-block w-100" alt="Yoga Area">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselAccommodation1" role="button" data-bs-slide="prev">
@@ -238,16 +238,16 @@
                                     <!-- Amenities List for Accommodation Option 1 -->
                                     <ul class="list-group list-group-flush mt-3">
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bed text-theme me-2"></i>Luxury Mountain Lodges
+                                            <i class="fas fa-bed text-theme me-2"></i>Single Beds
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bath text-theme me-2"></i>Private Bathrooms / Hot Water / Wi-Fi
+                                            <i class="fas fa-bath text-theme me-2"></i>AC / Wi-Fi
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-utensils text-theme me-2"></i>Organic Meals with Local Ingredients
+                                            <i class="fas fa-utensils text-theme me-2"></i>In-Room Dining Service
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-spa text-theme me-2"></i>Wellness Facilities and Spa Treatments
+                                            <i class="fas fa-clipboard-list text-theme me-2"></i>Yoga Equipment & Learning Materials
                                         </li>
                                     </ul>
                                 </div>
@@ -257,13 +257,13 @@
                                     <div id="carouselAccommodation2" class="carousel slide" data-bs-ride="carousel">
                                         <div class="carousel-inner rounded">
                                             <div class="carousel-item active">
-                                                <img src="images/himalaya-accommodation4.jpg" class="d-block w-100" alt="Guesthouse with Mountain Views">
+                                                <img src="images/sharedroom2.jpg" class="d-block w-100" alt="Double Bed">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/himalaya-accommodation5.jpg" class="d-block w-100" alt="Yoga Retreat Center">
+                                                <img src="images/reception area.jpg" class="d-block w-100" alt="Room Interior">
                                             </div>
                                             <div class="carousel-item">
-                                                <img src="images/himalaya-accommodation6.jpg" class="d-block w-100" alt="Cottage in the Himalayas">
+                                                <img src="images/bathroom.jpg" class="d-block w-100" alt="Bathroom">
                                             </div>
                                         </div>
                                         <a class="carousel-control-prev" href="#carouselAccommodation2" role="button" data-bs-slide="prev">
@@ -278,16 +278,16 @@
                                     <!-- Amenities List for Accommodation Option 2 -->
                                     <ul class="list-group list-group-flush mt-3">
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bed text-theme me-2"></i>Cozy Cottages and Guesthouses
+                                            <i class="fas fa-bed text-theme me-2"></i>Double Bed
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-bath text-theme me-2"></i>Shared or Private Facilities
+                                            <i class="fas fa-bath text-theme me-2"></i>Bathroom Amenities
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-utensils text-theme me-2"></i>Local and International Cuisine
+                                            <i class="fas fa-tree text-theme me-2"></i>Private Balcony with Garden View
                                         </li>
                                         <li class="list-group-item d-flex align-items-center">
-                                            <i class="fas fa-spa text-theme me-2"></i>Yoga and Meditation Sessions Available
+                                            <i class="fas fa-yin-yang text-theme me-2"></i>Complimentary Yoga Mats & Props
                                         </li>
                                     </ul>
                                 </div>
