--- a/chopta-location.html
+++ b/chopta-location.html
@@ -88,7 +88,7 @@
     </div>
 
     <!-- Chopta Page -->
-    <div class="chopta-page container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="background-color: #FAF8F8;">
+    <div class="location-page container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s" style="background-color: #FAF8F8;">
         <div class="container p-5">
             <div class="row">
                 <!-- Left Side Navigation - col-lg-3 -->
