--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -166,7 +166,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-spa fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Yoga Retreat</h5>
-                                                <p class="card-text">3 Days Yoga Retreat Rishikesh</p>
+                                                <p class="card-text">3 Days Yoga Retreat</p>
                                             </div>
                                         </div>
                                     </div>
@@ -186,7 +186,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-bed fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Accommodation</h5>
-                                                <p class="card-text">Private Room</p>
+                                                <p class="card-text">Private / Shared Room</p>
                                             </div>
                                         </div>
                                     </div>
@@ -206,7 +206,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-language fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Language of Instruction</h5>
-                                                <p class="card-text">Hindi/English</p>
+                                                <p class="card-text">Hindi / English</p>
                                             </div>
                                         </div>
                                     </div>
@@ -216,7 +216,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-map-marker-alt fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Location</h5>
-                                                <p class="card-text">Rishikesh, India</p>
+                                                <p class="card-text">Rishikesh / Chopta / Himalaya</p>
                                             </div>
                                         </div>
                                     </div>
@@ -238,7 +238,7 @@
                                                 <div class="circle-icon mb-3 mx-auto">
                                                     <i class="fas fa-dollar-sign fa-2x text-white"></i> <!-- Icon for USD fee -->
                                                 </div>
-                                                <h4 class="text-dark">$400 USD</h4>
+                                                <h4 class="text-dark">$399 USD</h4>
                                                 <p class="mb-0">Fee in US dollars is solely applicable to overseas visitors.</p>
                                             </div>
                                         </div>
@@ -249,7 +249,7 @@
                                                 <div class="circle-icon mb-3 mx-auto">
                                                     <i class="fas fa-rupee-sign fa-2x text-white"></i> <!-- Icon for INR fee -->
                                                 </div>
-                                                <h4 class="text-dark">₹26,000</h4>
+                                                <h4 class="text-dark">₹₹33,000</h4>
                                                 <p class="mb-0">Fee in INR is applicable for Indian citizens only.</p>
                                             </div>
                                         </div>
@@ -280,7 +280,7 @@
                                                 </li>
                                                 <li class="list-group-item d-flex align-items-center">
                                                     <i class="fas fa-shuttle-van fa-lg text-theme me-2"></i> <!-- Icon for airport pick-up service -->
-                                                    <span>Pick-up service From Dehradun Airport at guest’s expense</span>
+                                                    <span>Pick-up service From Airport at guest’s expense</span>
                                                 </li>
                                             </ul>
                                         </div>
