--- a/7-days-yoga-retreats.html
+++ b/7-days-yoga-retreats.html
@@ -167,7 +167,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-spa fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Yoga Retreat</h5>
-                                                <p class="card-text">7 Days Yoga Retreat Rishikesh</p>
+                                                <p class="card-text">7 Days Yoga Retreat</p>
                                             </div>
                                         </div>
                                     </div>
@@ -187,7 +187,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-bed fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Accommodation</h5>
-                                                <p class="card-text">Private Room</p>
+                                                <p class="card-text">Private / Shared Room</p>
                                             </div>
                                         </div>
                                     </div>
@@ -207,7 +207,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-language fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Language of Instruction</h5>
-                                                <p class="card-text">Hindi/English</p>
+                                                <p class="card-text">Hindi / English</p>
                                             </div>
                                         </div>
                                     </div>
@@ -217,7 +217,7 @@
                                             <div class="card-body text-center">
                                                 <i class="fas fa-map-marker-alt fa-3x text-theme mb-3"></i>
                                                 <h5 class="card-title mb-2">Location</h5>
-                                                <p class="card-text">Himalaya, India</p>
+                                                <p class="card-text">Rishikesh / Chopta / Himalaya</p>
                                             </div>
                                         </div>
                                     </div>
@@ -239,7 +239,7 @@
                                                 <div class="circle-icon mb-3 mx-auto">
                                                     <i class="fas fa-dollar-sign fa-2x text-white"></i> <!-- Icon for USD fee -->
                                                 </div>
-                                                <h4 class="text-dark">$400 USD</h4>
+                                                <h4 class="text-dark">$599 USD</h4>
                                                 <p class="mb-0">Fee in US dollars is solely applicable to overseas visitors.</p>
                                             </div>
                                         </div>
@@ -250,7 +250,7 @@
                                                 <div class="circle-icon mb-3 mx-auto">
                                                     <i class="fas fa-rupee-sign fa-2x text-white"></i> <!-- Icon for INR fee -->
                                                 </div>
-                                                <h4 class="text-dark">₹26,000</h4>
+                                                <h4 class="text-dark">₹50,000</h4>
                                                 <p class="mb-0">Fee in INR is applicable for Indian citizens only.</p>
                                             </div>
                                         </div>
