--- a/3-days-yoga-retreats.html
+++ b/3-days-yoga-retreats.html
@@ -249,7 +249,7 @@
                                                 <div class="circle-icon mb-3 mx-auto">
                                                     <i class="fas fa-rupee-sign fa-2x text-white"></i> <!-- Icon for INR fee -->
                                                 </div>
-                                                <h4 class="text-dark">₹₹33,000</h4>
+                                                <h4 class="text-dark">₹33,000</h4>
                                                 <p class="mb-0">Fee in INR is applicable for Indian citizens only.</p>
                                             </div>
                                         </div>
