--- a/chopta-location.html
+++ b/chopta-location.html
@@ -326,7 +326,7 @@
                     <ul class="link-animated list-unstyled text-start">
                         <li><a href="index.html" class="text-dark d-block mb-2">Home</a></li>
                         <li><a href="about.html" class="text-dark d-block mb-2">About Us</a></li>
-                        <li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Services</a></li>
+                        <li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Retreats</a></li>
                         <li><a href="rishikesh-location.html" class="text-dark d-block mb-2">Location</a></li>
                         <li><a href="contact.html" class="text-dark d-block mb-2">Contact Us</a></li>
                     </ul>
