--- a/contact.html
+++ b/contact.html
@@ -120,67 +120,59 @@
 
        <!-- Contact Section -->
 		<div class="container-fluid py-5 contact responsive-yoga-design"
-		style="
-				background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
-				background-size: 170px 170px, 170px 170px;
-				background-position: top left, bottom right; 
-				background-repeat: no-repeat, no-repeat; ">
-    <div class="container py-5">
-        <div class="row d-flex align-items-center justify-content-center">
-                        <!-- Yoga Session Details -->
-                        <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.3s">
-                            <div class="position-relative overflow-hidden rounded-3 shadow bg-white p-0">
-                                <img src="images/contact-details.png" alt="Yoga Session" class="img-fluid w-100" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
-                                <div class="p-4 bg-theme" style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px;">
-                                    <h3 class="text-white mb-3">Relax body & mind for visit our yoga session!!</h3>
-                                    <p class="text-white mb-1"><strong>Opening days :</strong></p>
-                                    <p class="text-white mb-0">mon - fri : 07:00am to 06:00pm</p>
-                                    <p class="text-white mb-0">sat - sun : Closed</p>
-                                </div>
-                            </div>
-                        </div>
-            <!-- Contact Information -->
-            <div class="col-lg-5 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="bg-white shadow p-5 rounded-3 mb-4 d-flex align-items-center">
-                    <div class="icon-circle bg-theme text-white rounded-circle me-3">
-                        <i class="fa fa-map-marker-alt fa-2x"></i>
-                    </div>
-                    <div>
-                        <h5 class="mb-1">Location</h5>
-                        <p class="m-0">150 meter Ahead of Hosteller Hostel, Balaknath Temple Road, Upper Tapovan, Rishikesh, Uttarakhand 249192</p>
-                    </div>
-                </div>
-                <div class="bg-white shadow p-5 rounded-3 mb-4 d-flex align-items-center">
-                    <div class="icon-circle bg-theme text-white rounded-circle me-3">
-                        <i class="fa fa-phone fa-2x"></i>
-                    </div>
-                    <div>
-                        <h5 class="mb-1">Phone</h5>
-                        <p class="m-0">(+61 3 8376 6284) <br>(+800 2345 6789)</p>
-                    </div>
-                </div>
-                <div class="bg-white shadow p-5 rounded-3 d-flex align-items-center">
-                    <div class="icon-circle bg-theme text-white rounded-circle me-3">
-                        <i class="fa fa-envelope fa-2x"></i>
-                    </div>
-                    <div>
-                        <h5 class="mb-1">Email</h5>
-                        <p class="m-0">vikashnawani999@gmail.com</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-		<div class="container-fluid wow slideInUp p-3" data-wow-delay="0.6s">
-				<iframe class="position-relative rounded w-100 h-100"
-				src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.7535759562084!2d78.3165724753484!3d30.129864124880616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3909170f057bc725%3A0x19af18b34dadf31!2sThe%20Hosteller%20Rishikesh%2C%20Upper%20Tapovan!5e0!3m2!1sen!2sin!4v1725622260010!5m2!1sen!2sin"
-				frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
-				tabindex="0"></iframe>
+			style="
+			background-image: url('images/yoga-design-(1).png'), url('images/yoga-design-(2).png'); 
+			background-size: 130px 130px, 170px 170px;
+			background-position: top left, bottom right; 
+			background-repeat: no-repeat, no-repeat; ">
+			<div class="container py-5">
+				<div class="row justify-content-center align-items-center">
+					<!-- Left Side: Contact Information -->
+					<div class="col-lg-6 mb-4 mb-lg-0">
+						<div class="contact-info p-4">
+							<h5 class="text-theme fw-bold mb-3">Contact Us</h5>
+							<h2 class="mb-4">Get In Touch</h2>
+							<p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enim. Nullam id varius nunc id varius nunc.</p>
+							<ul class="list-unstyled">
+								<li class="d-flex align-items-center mb-3">
+									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
+										<i class="fas fa-phone-alt text-white"></i>
+									</span>
+									<span>+123 456 7890</span>
+								</li>
+								<li class="d-flex align-items-center mb-3">
+									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
+										<i class="fas fa-envelope text-white"></i>
+									</span>
+									<span>info@yourmail.com</span>
+								</li>
+								<li class="d-flex align-items-center">
+									<span class="contact-icon bg-theme rounded-circle d-flex justify-content-center align-items-center me-3">
+										<i class="fas fa-map-marker-alt text-white"></i>
+									</span>
+									<span>256 Mohra Rd, North London, UK</span>
+								</li>
+							</ul>
+						</div>
+					</div>
+			
+					<!-- Right Side: Map Section -->
+					<div class="col-lg-6">
+						<div class="position-relative overflow-hidden rounded-3 shadow bg-white p-0">
+							<img src="images/contact-details.png" alt="Yoga Session" class="img-fluid w-100" style="border-top-left-radius: 10px; border-top-right-radius: 10px;">
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
-        
+		<div class="container-fluid wow slideInUp p-3" data-wow-delay="0.6s">
+			<iframe class="position-relative rounded w-100 h-100"
+			src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3450.7535759562084!2d78.3165724753484!3d30.129864124880616!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3909170f057bc725%3A0x19af18b34dadf31!2sThe%20Hosteller%20Rishikesh%2C%20Upper%20Tapovan!5e0!3m2!1sen!2sin!4v1725622260010!5m2!1sen!2sin"
+			frameborder="0" style="min-height: 450px; border:0;" allowfullscreen="" aria-hidden="false"
+			tabindex="0"></iframe>
+		</div>
+		
 		<!-- Footer Section -->
 		<footer class="bg-white text-dark pt-5 pb-4">
 			<div class="container text-center text-md-left">
@@ -200,7 +192,7 @@
 						<ul class="link-animated list-unstyled text-start">
 							<li><a href="index.html" class="text-dark d-block mb-2">Home</a></li>
 							<li><a href="about.html" class="text-dark d-block mb-2">About Us</a></li>
-							<li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Services</a></li>
+							<li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Retreats</a></li>
 							<li><a href="rishikesh-location.html" class="text-dark d-block mb-2">Location</a></li>
 							<li><a href="contact.html" class="text-dark d-block mb-2">Contact Us</a></li>
 						</ul>
