--- a/about.html
+++ b/about.html
@@ -107,7 +107,7 @@
 		</header>
 
 		<!-- Banner Section -->
-		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/yogahall3.jpg') center center no-repeat;">
+		<div class="container-fluid bg-theme py-5 banner" style="background: linear-gradient(rgba(9, 30, 62, 0.7), rgba(9, 30, 62, 0.7)), url('images/about-banner.jpg') center center no-repeat;">
 			<div class="row py-5">
 				<div class="col-12 mt-lg-5 text-center">
 					<h1 class="display-4 text-white animated zoomIn">About</h1>
@@ -341,7 +341,7 @@
 						<ul class="link-animated list-unstyled text-start">
 							<li><a href="index.html" class="text-dark d-block mb-2">Home</a></li>
 							<li><a href="about.html" class="text-dark d-block mb-2">About Us</a></li>
-							<li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Services</a></li>
+							<li><a href="3-days-yoga-retreats.html" class="text-dark d-block mb-2">Retreats</a></li>
 							<li><a href="rishikesh-location.html" class="text-dark d-block mb-2">Location</a></li>
 							<li><a href="contact.html" class="text-dark d-block mb-2">Contact Us</a></li>
 						</ul>
